fix all problems